background image fix

--- a/style.css
+++ b/style.css
@@ -8,11 +8,11 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 }
 
 body {
-    background-image: url('https://storage.ko-fi.com/cdn/useruploads/display/739f9019-c768-4551-a9a3-d434cb12c5a5_chatgptpromptlibrary.jpg');
+    /* background-image: url('https://storage.ko-fi.com/cdn/useruploads/display/739f9019-c768-4551-a9a3-d434cb12c5a5_chatgptpromptlibrary.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: 100% 100%;
-    
+    background-size: 100% 100%; */
+    /* background: #331D44 url(https://storage.ko-fi.com/cdn/useruploads/display/739f9019-c768-4551-a9a3-d434cb12c5a5_chatgptpromptlibrary.jpg) left center/contain no-repeat; */
   }
 article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {
     display: block;
@@ -85,11 +85,12 @@ body:before {
     transform: scale(1);
     width: 100vw;
     z-index: 0;
-    background-image: url('https://storage.ko-fi.com/cdn/useruploads/display/739f9019-c768-4551-a9a3-d434cb12c5a5_chatgptpromptlibrary.jpg');
+    /* background-image: url('https://storage.ko-fi.com/cdn/useruploads/display/739f9019-c768-4551-a9a3-d434cb12c5a5_chatgptpromptlibrary.jpg');
     background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: #F2F2FA;
+    background-color: #F2F2FA; */
+    background: #331D44 url(https://storage.ko-fi.com/cdn/useruploads/display/739f9019-c768-4551-a9a3-d434cb12c5a5_chatgptpromptlibrary.jpg) center left/cover no-repeat;
 }
 
 body:after {
@@ -1308,6 +1309,10 @@ form .actions button:disabled {
 @media (max-width: 736px) {
     html {
         font-size: 13pt;
+    }
+
+    body {
+        background: #331D44 url(https://storage.ko-fi.com/cdn/useruploads/display/739f9019-c768-4551-a9a3-d434cb12c5a5_chatgptpromptlibrary.jpg) left bottom/cover no-repeat;
     }
 
     #main {
